feature: Use previously selected GW2-Account-IDs on new authorization